@@ -1,5 +1,8 @@
 ubuntu-release-upgrader (1:20.04.27) focal; urgency=medium
 
+  * DistUpgrade/DistUpgradeQuirks.py: In addition to quirking python-minimal
+    we also need to quirk python-dbg, python-doc, and python-dev.
+    (LP: #1887544)
 
  -- Brian Murray <brian@ubuntu.com>  Wed, 09 Sep 2020 11:27:27 -0700
 
